added styles on the learning

--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Git Learning</title>
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="./styles/default.css" />
+    <link rel="stylesheet" href="./styles/helper.css" />
     <link rel="stylesheet" href="./styles/style.css" />
 </head>
 <body>
-    <div id="app"></div>
+    <div class='header text-center w-100 pos-fixed bg-primary'>
+        <h1 class="text-white">Git Learning</h1>
+    </div>
+    <div class="main-layout">
+        <div id="app"></div>
+    </div>
+    <footer class="text-center">
+        <p>git-leraning@2021</p>
+    </footer>
     <script src="./scripts/libs/loader.js"></script>
     <script src="./scripts/libs/elements.js"></script>
     <script src="./scripts/app.js"></script>
