--- a/src/index.html
+++ b/src/index.html
@@ -1,26 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Git Learning</title>
-    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="./styles/default.css" />
-    <link rel="stylesheet" href="./styles/helper.css" />
-    <link rel="stylesheet" href="./styles/style.css" />
+  <meta charset="utf-8">
+  <title>GitLearning</title>
+  <base href="/">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-    <div class='header text-center w-100 pos-fixed bg-primary'>
-        <h1 class="text-white">Git Learning</h1>
-    </div>
-    <div class="main-layout">
-        <div id="app"></div>
-    </div>
-    <footer class="text-center">
-        <p>git-leraning@2021</p>
-    </footer>
-    <script src="./scripts/libs/loader.js"></script>
-    <script src="./scripts/libs/elements.js"></script>
-    <script src="./scripts/app.js"></script>
+  <app-root></app-root>
 </body>
 </html>
